# databricks-ingetion

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: spark_practice.ipynb  word_count.ipynb
src/: helper.py  loader.py  spark_session.py
streaming/: DeltaStreamProcessor  autoloader.py  delta_incremental_processor.py
